// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/SimpleIconDropdown Default Example 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "width": "6rem",
        }
      }
    >
      <div
        className="bx--dropdown__wrapper bx--list-box__wrapper"
      >
        <label
          className="bx--label"
          htmlFor="downshift-0-toggle-button"
          id="downshift-0-label"
        >
          Icon
        </label>
        <div
          className="bx--dropdown iot--icon-dropdown bx--list-box"
          id="mySimpleIconDropdown"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <button
            aria-disabled={false}
            aria-expanded={false}
            aria-haspopup="listbox"
            aria-labelledby="downshift-0-label downshift-0-toggle-button"
            className="bx--list-box__field"
            disabled={false}
            id="downshift-0-toggle-button"
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            <span
              className="bx--list-box__label"
            >
              <div
                className="iot--icon-dropdown__item"
                style={
                  Object {
                    "color": "unset",
                  }
                }
              >
                <div
                  className="iot--icon-dropdown__item-border"
                >
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M10 15.9L4.7 10.6 3.6 11.6 8.9 16.9 10 18 20.6 7.4 19.5 6.3z"
                    />
                  </svg>
                </div>
              </div>
            </span>
            <div
              className="bx--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height={16}
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <div
            aria-labelledby="downshift-0-label"
            className="bx--list-box__menu"
            id="downshift-0-menu"
            onBlur={[Function]}
            onKeyDown={[Function]}
            onMouseLeave={[Function]}
            role="listbox"
            tabIndex={-1}
          />
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/SimpleIconDropdown With Defined Icon Colors 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "width": "6rem",
        }
      }
    >
      <div
        className="bx--dropdown__wrapper bx--list-box__wrapper"
      >
        <label
          className="bx--label"
          htmlFor="downshift-0-toggle-button"
          id="downshift-0-label"
        >
          Icon
        </label>
        <div
          className="bx--dropdown iot--icon-dropdown bx--list-box"
          id="mySimpleIconDropdown"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <button
            aria-disabled={false}
            aria-expanded={false}
            aria-haspopup="listbox"
            aria-labelledby="downshift-0-label downshift-0-toggle-button"
            className="bx--list-box__field"
            disabled={false}
            id="downshift-0-toggle-button"
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            <span
              className="bx--list-box__label"
            >
              <div
                className="iot--icon-dropdown__item"
                style={
                  Object {
                    "color": "red",
                  }
                }
              >
                <div
                  className="iot--icon-dropdown__item-border"
                >
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16,2C8.2,2,2,8.2,2,16s6.2,14,14,14s14-6.2,14-14S23.8,2,16,2z M16,28C9.4,28,4,22.6,4,16S9.4,4,16,4s12,5.4,12,12	S22.6,28,16,28z"
                    />
                    <path
                      d="M14.8 7.3H17V24.900000000000002H14.8z"
                      transform="rotate(-45.001 15.929 16.071)"
                    />
                  </svg>
                </div>
              </div>
            </span>
            <div
              className="bx--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height={16}
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <div
            aria-labelledby="downshift-0-label"
            className="bx--list-box__menu"
            id="downshift-0-menu"
            onBlur={[Function]}
            onKeyDown={[Function]}
            onMouseLeave={[Function]}
            role="listbox"
            tabIndex={-1}
          />
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/SimpleIconDropdown With Selected Icon 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "width": "6rem",
        }
      }
    >
      <div
        className="bx--dropdown__wrapper bx--list-box__wrapper"
      >
        <label
          className="bx--label"
          htmlFor="downshift-0-toggle-button"
          id="downshift-0-label"
        >
          Icon
        </label>
        <div
          className="bx--dropdown iot--icon-dropdown bx--list-box"
          id="mySimpleIconDropdown"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <button
            aria-disabled={false}
            aria-expanded={false}
            aria-haspopup="listbox"
            aria-labelledby="downshift-0-label downshift-0-toggle-button"
            className="bx--list-box__field"
            disabled={false}
            id="downshift-0-toggle-button"
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            <span
              className="bx--list-box__label"
            >
              <div
                className="iot--icon-dropdown__item"
                style={
                  Object {
                    "color": "unset",
                  }
                }
              >
                <div
                  className="iot--icon-dropdown__item-border"
                >
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M17 22L17 13 13 13 13 15 15 15 15 22 12 22 12 24 20 24 20 22 17 22zM16 7a1.5 1.5 0 101.5 1.5A1.5 1.5 0 0016 7z"
                    />
                    <path
                      d="M16,30A14,14,0,1,1,30,16,14,14,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12,12,0,0,0,16,4Z"
                    />
                  </svg>
                </div>
              </div>
            </span>
            <div
              className="bx--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height={16}
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <div
            aria-labelledby="downshift-0-label"
            className="bx--list-box__menu"
            id="downshift-0-menu"
            onBlur={[Function]}
            onKeyDown={[Function]}
            onMouseLeave={[Function]}
            role="listbox"
            tabIndex={-1}
          />
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
